Application : 'microservice-produit' -- Fichier de propriétés : 'microservice-produit.yml' -- Modifié

--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -16,7 +16,7 @@ spring:
     #driverClassName: "com.mysql.cj.jdbc.Driver"
     driverClassName: "org.mariadb.jdbc.Driver"
     sql-script-encoding: UTF-8
-    initialization-mode: always
+    #initialization-mode: always
     data: "classpath:data.sql"
   # ---- (02.02.)SPRING-JPA-CONFIGURATION ----
   jpa:
