--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -23,7 +23,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: "upate"
+      ddl-auto: "update"
     properties:
       hibernate:
         dialect: "org.hibernate.dialect.MariaDB53Dialect"
