--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -16,7 +16,7 @@ spring:
     #driverClassName: "com.mysql.cj.jdbc.Driver"
     driverClassName: "org.mariadb.jdbc.Driver"
     sql-script-encoding: UTF-8
-    #initialization-mode: always
+    initialization-mode: always
     #initialize: true
     data: "classpath:import.sql"
   # ---- (02.02.)SPRING-JPA-CONFIGURATION ----
