--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -17,13 +17,13 @@ spring:
     driverClassName: "org.mariadb.jdbc.Driver"
     sql-script-encoding: UTF-8
     initialization-mode: always
-    #initialize: true
+    initialize: false
     data: "classpath:import.sql"
   # ---- (02.02.)SPRING-JPA-CONFIGURATION ----
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: "update"
+      ddl-auto: "create"
     properties:
       hibernate:
         dialect: "org.hibernate.dialect.MariaDB53Dialect"
