--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -16,8 +16,8 @@ spring:
     #driverClassName: "com.mysql.cj.jdbc.Driver"
     driverClassName: "org.mariadb.jdbc.Driver"
     sql-script-encoding: UTF-8
-    initialization-mode: always
-    initialize: false
+    #initialization-mode: always
+    #initialize: false
     #data: "classpath:import.sql"
   # ---- (02.02.)SPRING-JPA-CONFIGURATION ----
   jpa:
