--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -13,8 +13,8 @@ spring:
     url: "jdbc:mariadb://localhost:3306/produitdb?createDatabaseIfNotExist=true"
     username: "root"
     password: "tcharou"
-    #driverClassName: "com.mysql.cj.jdbc.Driver"
-    driverClassName: "org.mariadb.jdbc.Driver"
+    driverClassName: "com.mysql.cj.jdbc.Driver"
+    #driverClassName: "org.mariadb.jdbc.Driver"
     sql-script-encoding: UTF-8
     #initialization-mode: always
     #initialize: false
