--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -17,8 +17,8 @@ spring:
     driverClassName: "org.mariadb.jdbc.Driver"
     sql-script-encoding: UTF-8
     #initialization-mode: always
-    initialize: true
-    data: "classpath:data.sql"
+    #initialize: true
+    #data: "classpath:import.sql"
   # ---- (02.02.)SPRING-JPA-CONFIGURATION ----
   jpa:
     show-sql: true
