--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -18,7 +18,7 @@ spring:
     sql-script-encoding: UTF-8
     #initialization-mode: always
     #initialize: true
-    #data: "classpath:import.sql"
+    #data: "classpath:data.sql"
   # ---- (02.02.)SPRING-JPA-CONFIGURATION ----
   jpa:
     show-sql: true
