--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -13,7 +13,7 @@ spring:
     url: "jdbc:mariadb://localhost:3306/produitdb?createDatabaseIfNotExist=true"
     username: "root"
     password: "tcharou"
-    driverClassName: "org.mariadb.jdbc.Driver"
+    driver-class-name: "org.mariadb.jdbc.Driver"
     sql-script-encoding: UTF-8
     #initialization-mode: always
     #initialize: true
