--- a/auth-server.yml
+++ b/auth-server.yml
@@ -37,12 +37,12 @@ ribbon:
 ######################################################
 # ---- (06.)HYSTRIX-CONFIGURATION ----
 ######################################################
-hystrix:
-  command:
-    default:
-      execution:
-        timeout:
-          enabled: false
+#hystrix:
+#  command:
+#    default:
+#      execution:
+#        timeout:
+#          enabled: false
 
 ######################################################
 # ---- (07.)SPRING-CONFIGURATION ----
