Application : 'zuul-server' -- Fichier de propriétés distant : 'zuuul-server.yml' -- Propriété : 'zuul.routes.uaa' et 'zuul.routes.produit'

--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -52,10 +52,10 @@ zuul:
     socket-timeout-millis: 5000
     connect-timeout-millis: 5000
   routes:
-    auth:
-      path: /auth-path/**
+    uaa:
+      path: /uaa/**
       sensitiveHeaders:
       serviceId: auth-server
     produit:
-      path: /produit-path/**
+      path: /produit/**
       serviceId: microservice-produit
