Mise en place du framework 'oauth2'

--- a/auth-server.yml
+++ b/auth-server.yml
@@ -55,7 +55,7 @@ spring:
       password: "mdp"
   # ---- (04.02.)SPRING-DATASOURCE-CONFIGURATION ----
   #datasource:
-    #url: "jdbc:mysql://localhost:33306/oauth2db?useSSL=false"
+    #url: "jdbc:mariadb://localhost:3306/oauth2db?useSSL=false"
     #username: "oauth2UserName"
     #password: "oauth2Password"
     #driver-class-name: "org.mariadb.jdbc.Driver"
