--- a/microservice-produit.yml
+++ b/microservice-produit.yml
@@ -53,11 +53,7 @@ spring:
       ddl-auto: "create"
     properties:
       hibernate:
-        dialect: "org.hibernate.dialect.MariaDB53Dialect"
-  # ---- (02.03.)SPRING-H2-CONFIGURATION ----
-  #h2:
-  #  console:
-  #    enabled: true
+        dialect: "org.hibernate.dialect.MariaDBDialect"
 
 ######################################################
 # ---- (06.)SECURITY-CONFIGURATION ----
