--- a/zuul-server.yml
+++ b/zuul-server.yml
@@ -59,3 +59,17 @@ zuul:
     produit:
       path: /produit/**
       serviceId: microservice-produit
+
+security:
+  user:
+    name: root
+    password: password
+  oauth2:
+    client:
+      accessTokenUri: http://localhost:8765/uua/oauth/token
+      userAuthorizationUri: http://localhost:8765/uua/oauth/authorize
+      clientAuthenticationScheme: form
+    resource:
+      userInfoUri: http://localhost:8765/uaa/user
+      preferTokenInfo: false  
+  sessions: ALWAYS 
