Application : 'ZuulServer' -- Fichier de propriétés distant : 'ZuulServer.yml' -- Propriété : 'security.client.user' et 'security.client.password' -- Désactivés

--- a/zuulServer.yml
+++ b/zuulServer.yml
@@ -55,21 +55,24 @@ zuul:
     uaa:
       path: /uaa/**
       sensitiveHeaders:
-      serviceId: auth-server
+      serviceId: authServer
     produit:
       path: /produit/**
-      serviceId: microservice-produit
+      serviceId: produitServer
 
+######################################################
+# ---- (08.)SECURITY-CONFIGURATION ----
+######################################################
 security:
-  user:
-    name: root
-    password: password
+  #user:
+    #name: root
+    #password: password
   oauth2:
     client:
-      accessTokenUri: http://localhost:8765/uua/oauth/token
-      userAuthorizationUri: http://localhost:8765/uua/oauth/authorize
+      accessTokenUri: http://localhost:9104/uua/oauth/token
+      userAuthorizationUri: http://localhost:9104/uua/oauth/authorize
       clientAuthenticationScheme: form
     resource:
-      userInfoUri: http://localhost:8765/uaa/user
+      userInfoUri: http://localhost:9104/uaa/user
       preferTokenInfo: false  
-  sessions: ALWAYS 
+  sessions: always 
