--- a/authServer.yml
+++ b/authServer.yml
@@ -55,12 +55,12 @@ spring:
       password: "mdp"
   # ---- (04.02.)SPRING-DATASOURCE-CONFIGURATION ----
   #datasource:
-    #url: "jdbc:mariadb://localhost:3306/oauth2db?useSSL=false"
-    #username: "oauth2UserName"
-    #password: "oauth2Password"
-    #driver-class-name: "org.mariadb.jdbc.Driver"
-    #schema: "classpath:/script/schema.sql"
-    #data: "classpath:/script/data.sql"
+    url: "jdbc:mariadb://localhost:3306/oauth2db?useSSL=false"
+    username: "oauth2UserName"
+    password: "oauth2Password"
+    driver-class-name: "org.mariadb.jdbc.Driver"
+    schema: "classpath:/script/schema.sql"
+    data: "classpath:/script/data.sql"
 
 ######################################################
 # ---- (08.)SECURITY-CONFIGURATION ----
